package com.example.projecttest;

public interface DataStorable {
    void storeResult(String result);
    String getResult();
}