package com.example.projecttest;

import javafx.application.Application;

public class Launcher {
    public static void main(String[] args) {
        Application.launch(EncoderApp.class, args);
    }
}
