package com.example.projecttest;


public interface ScreenNavigator {
    void changeScreen(javafx.scene.Parent root);
}